force-app/main/default/objects/User/fields/PrivacyPolicyAcceptanceDateTime__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicyAcceptanceDateTime__c</fullName>
    <description>Data model to support consent capture for Privacy Policy</description>
    <label>Privacy Policy Acceptance Date/Time</label>
    <type>DateTime</type>
</CustomField>