force-app/main/default/objects/User/fields/PrivacyPolicyAccepted__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicyAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data model to support consent capture for Privacy Policy</description>
    <label>Privacy Policy Accepted</label>
    <type>Checkbox</type>
</CustomField>