force-app/main/default/objects/User/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <externalId>true</externalId>
    <label>Sales Representative</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>